# ai-poc

./: .dockerignore  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  Makefile  README.md  config.yml  deploy.sh  docker-compose.yml  examples.sh  prompt.txt  pyproject.toml  setup.sh  test_chat_history.sh  tmp.txt  verify-setup.sh  verify_setup.py
.github/instructions/: python.instructions.md
Kafka/: README.md  docker-compose.yml
Kafka/kafka-ui/: kafka-ui.yaml
Kafka/scripts/: create-topics.sh  list-topics.sh  sample-consumer.sh  sample-producer.sh  wait-for-kafka.sh  wait-for-zk.sh
Prometheus-Grafana/: README.md  docker-compose.yml
Prometheus-Grafana/alertmanager/: config.yml
Prometheus-Grafana/grafana/provisioning/dashboards/: dashboards.yml  sample-dashboard.json
Prometheus-Grafana/grafana/provisioning/datasources/: datasource.yml
Prometheus-Grafana/prometheus/: prometheus.yml
Prometheus-Grafana/prometheus/rules/: alerts.yml
Prometheus-Grafana/scripts/: push-alert-metric.sh  push-sample-metrics.sh  wait-for-grafana.sh  wait-for-prometheus.sh
app/: __init__.py  config.py  csv_loader.py  excel_loader.py  graph.py  main.py  match.py  schemas.py  service.py
app/api/: dependencies.py  routes.py  schemas.py
app/api/routers/: chat.py  health.py  inference.py
app/core/: cache.py  config.py  logging.py  rate_limit.py  security.py
app/llm/: chain.py  loader.py
app/llm/prompts/: base_system.txt
app/models/: article.py
app/scraper/: google_search.py
app/utils/: errors.py  timing.py
clients/: __init__.py
clients/node/: cli.mjs  package.json
clients/python/: __init__.py  cli.py
data/: relationships.csv  relationships.xlsx  sample_queries.jsonl
docs/: CHAT_HISTORY.md  CHECKLIST.md  DELIVERY.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  TROUBLESHOOTING_STUCK_ENDPOINT.md  VERIFICATION.md
elastic-docker/: README.md  docker-compose.yml  kibana.yml  pg_to_es_sync.py  setup_sync.sh
mcp-postgres-ai/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-postgres-ai/src/agent/: http_api.py  ws_client.py
mcp-postgres-ai/src/mcp_server/: config.py  db.py  main.py  tools.py  ws_server.py
prompt/: elastic-docker.txt  kafka.txt  prometheus-grafana.txt  redis.txt  supabase+langfuse.txt
redis/: .env.sample.yml  README.md  docker-compose.yml  redis.conf
supabase-langfuse/: .env.example  .gitignore  GENERATE-JWT-GUIDE.md  JWT-TOKENS.md  QUICK-START.md  README.md  SECRETS-GENERATOR-README.md  docker-compose.yml  generate-jwt.py  generate-jwt.sh  kong.yml
tests/: test_api_http.py  test_api_ws.py  test_config.py  test_graph.py  test_inference.py  test_match.py  test_scraper.py
