[tool.poetry]
name = "relationship-finder-mcp"
version = "0.1.0"
description = "MCP service to find relationships using FastAPI and LangGraph"
authors = ["Girish"]
packages = [
    { include = "app" },
    { include = "clients" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
websockets = "^11.0.3"
langgraph = "^0.0.11"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
rapidfuzz = "^3.3.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
redis = {extras = ["hiredis"], version = "^5.0.1", optional = true}
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.1"
mypy = "^1.6.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B", "C"]
ignore = ["E501"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]